--- a/gb/19/12/2/n11694217.md
+++ b/gb/19/12/2/n11694217.md
@@ -1,74 +1,80 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/ijwoue2416/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/ijwoue2416/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>Ã¿ÈÕÈýÍËÉùÃ÷¾«Ñ¡£¨2019/12/01£©</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="è´­ç‰©"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="ææ¬¾"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>æ¯æ—¥ä¸‰é€€å£°æ˜Žç²¾é€‰ï¼ˆ2019/12/01ï¼‰</h2>
 
 <h6></h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê12ÔÂ02ÈÕÑ¶¡¿</p>
-<p><strong><a href="https://github.com/ijwoue2416/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md">ÈýÍË</a></strong><br />
-ÎÒÃ»ÓÐÐÞÁ¶·¨ÂÖ´ó·¨£¬µ«¿´¹ýÒ»±é¡¶×ª·¨ÂÖ¡·£¬ÖªµÀ·¨ÂÖ´ó·¨ºÃ£¬Á¶·¨ÂÖ¹¦µÄÈË¶¼ÊÇÐ©ºÃÈË£¬¹²²úµ³ÆÈº¦·¨ÂÖ¹¦Ñ§Ô±£¬´òËÀ¡¢´ò²Ð¡¢´òÉËÄÇÃ´¶àºÃÈË£¬ÕæÊÇ×ï¶ñÌÏÌì¡£ÎÒÔç¾Í²»ÏàÐÅ¹²²úµ³ÁË£¬ËüµÄ±¾ÐÔ¾ÍÊÇ¼Ù¡¢¶ñ¡¢¶·¡£ÎÒÖ£ÖØÉùÃ÷£ºÍË³öºìÐ¡±øºÍÉÙÏÈ¶Ó×éÖ¯£¡<br />
-ÉùÃ÷ÈË: ´º»Û<br />
+<p>ã€å¤§çºªå…ƒ2019å¹´12æœˆ02æ—¥è®¯ã€‘</p>
+<p><strong><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">ä¸‰é€€</a></strong><br />
+æˆ‘æ²¡æœ‰ä¿®ç‚¼æ³•è½®å¤§æ³•ï¼Œä½†çœ‹è¿‡ä¸€éã€Šè½¬æ³•è½®ã€‹ï¼ŒçŸ¥é“æ³•è½®å¤§æ³•å¥½ï¼Œç‚¼æ³•è½®åŠŸçš„äººéƒ½æ˜¯äº›å¥½äººï¼Œå…±äº§å…šè¿«å®³æ³•è½®åŠŸå­¦å‘˜ï¼Œæ‰“æ­»ã€æ‰“æ®‹ã€æ‰“ä¼¤é‚£ä¹ˆå¤šå¥½äººï¼ŒçœŸæ˜¯ç½ªæ¶æ»”å¤©ã€‚æˆ‘æ—©å°±ä¸ç›¸ä¿¡å…±äº§å…šäº†ï¼Œå®ƒçš„æœ¬æ€§å°±æ˜¯å‡ã€æ¶ã€æ–—ã€‚æˆ‘éƒ‘é‡å£°æ˜Žï¼šé€€å‡ºçº¢å°å…µå’Œå°‘å…ˆé˜Ÿç»„ç»‡ï¼<br />
+å£°æ˜Žäºº: æ˜¥æ…§<br />
 2019-12-01 00:16<br />
-ÁÉÄþ<br />
-<a href="http://tuidang.epochtimes.com/index/showpost/id/25430261">http://tuidang.epochtimes.com/index/showpost/id/25430261</a></p>
-<p><strong><a href="https://github.com/ijwoue2416/djy/blob/master/gb/tag/%E9%80%80%E5%85%9A.md">ÍËµ³</a> ÍËÍÅ ÍË¶Ó</strong><br />
-ËäÈ»ÉíÔÚË¾·¨½ç£¬µ«ÊÇÒ»Ö±½àÉí×ÔºÃ£¬Å¬Á¦×öµ½ÑÏÃ÷¹«ÕýµÄ¶Ô´ýÃ¿Ò»×Ú°¸¼þ¡£Ò²´ÓÃ»ÓÐ°ÑÈëµ³Ê±µÄÊÄÑÔµ±»ØÊÂ£¬ÈÏÎª×Ô¼º×ßÕý¶ÔµÃÆðÁ¼ÐÄ¾ÍÐÐ¡£½ñÌì¶ÔÈëµ³Ê±µÄÊÄ´Ê£¬ÓÐÁËÐÂµÄÈÏÊ¶£¬¼ÈÈ»ÒªÈÏ×æ¹é×Ú£¬¾Í²»ÄÜÔÙ×öÂíÁÐ×ÓËï£¬ËùÒÔÉùÃ÷ÍË³öµ³ÍÅ¶Ó£¬Í¬¶ñµ³»®Çå½çÏÞ¡£<br />
-ÉùÃ÷ÈË: ºúÇåÃ÷<br />
+è¾½å®<br />
+<ahref="http://tuidang.epochtimes.com/index/showpost/id/25430261">http://tuidang.epochtimes.com/index/showpost/id/25430261</a></p>
+<p><strong><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%80%80%E5%85%9A.md#1">é€€å…š</a> é€€å›¢ é€€é˜Ÿ</strong><br />
+è™½ç„¶èº«åœ¨å¸æ³•ç•Œï¼Œä½†æ˜¯ä¸€ç›´æ´èº«è‡ªå¥½ï¼ŒåŠªåŠ›åšåˆ°ä¸¥æ˜Žå…¬æ­£çš„å¯¹å¾…æ¯ä¸€å®—æ¡ˆä»¶ã€‚ä¹Ÿä»Žæ²¡æœ‰æŠŠå…¥å…šæ—¶çš„èª“è¨€å½“å›žäº‹ï¼Œè®¤ä¸ºè‡ªå·±èµ°æ­£å¯¹å¾—èµ·è‰¯å¿ƒå°±è¡Œã€‚ä»Šå¤©å¯¹å…¥å…šæ—¶çš„èª“è¯ï¼Œæœ‰äº†æ–°çš„è®¤è¯†ï¼Œæ—¢ç„¶è¦è®¤ç¥–å½’å®—ï¼Œå°±ä¸èƒ½å†åšé©¬åˆ—å­å­™ï¼Œæ‰€ä»¥å£°æ˜Žé€€å‡ºå…šå›¢é˜Ÿï¼ŒåŒæ¶å…šåˆ’æ¸…ç•Œé™ã€‚<br />
+å£°æ˜Žäºº: èƒ¡æ¸…æ˜Ž<br />
 2019-12-01 06:59<br />
-ÐÂ½®<br />
-<a href="http://tuidang.epochtimes.com/index/showpost/id/25430496">http://tuidang.epochtimes.com/index/showpost/id/25430496</a></p>
-<p><strong><a href="https://github.com/ijwoue2416/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md">ÈýÍË</a>ÉùÃ÷</strong><br />
-ÉÙÄêÊ±ÎÒÊÜÖÐ¹²¹Æ»ó»ý¼«¼ÓÈëÉÙÏÈ¶Ó£¬ÏÖÎÒÒÑÁË½âÖÐ¹²Ö®Ð°¶ñ£¬¾Ü¾ø¼ÓÈëÖÐ¹ú¹²²úµ³¡£ÏÖÔÚÎÒ´ú±íÎÒ×Ô¼º£¬ÔÚ´ó¼ÍÔªÉÏÉùÃ÷£ºÎÒÒªÍË³ö¹²ÇàÍÅ£¡ÍË³öÉÙÏÈ¶Ó£¡ÓÀÔ¶ÓëÖÐ¹ú¹²²úµ³»®Çå½çÏß£¡<br />
-ÉùÃ÷ÈË: ´ó»¢<br />
+æ–°ç–†<br />
+<ahref="http://tuidang.epochtimes.com/index/showpost/id/25430496">http://tuidang.epochtimes.com/index/showpost/id/25430496</a></p>
+<p><strong><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">ä¸‰é€€</a>å£°æ˜Ž</strong><br />
+å°‘å¹´æ—¶æˆ‘å—ä¸­å…±è›Šæƒ‘ç§¯æžåŠ å…¥å°‘å…ˆé˜Ÿï¼ŒçŽ°æˆ‘å·²äº†è§£ä¸­å…±ä¹‹é‚ªæ¶ï¼Œæ‹’ç»åŠ å…¥ä¸­å›½å…±äº§å…šã€‚çŽ°åœ¨æˆ‘ä»£è¡¨æˆ‘è‡ªå·±ï¼Œåœ¨å¤§çºªå…ƒä¸Šå£°æ˜Žï¼šæˆ‘è¦é€€å‡ºå…±é’å›¢ï¼é€€å‡ºå°‘å…ˆé˜Ÿï¼æ°¸è¿œä¸Žä¸­å›½å…±äº§å…šåˆ’æ¸…ç•Œçº¿ï¼<br />
+å£°æ˜Žäºº: å¤§è™Ž<br />
 2019-12-01 14:19<br />
-<a href="http://tuidang.epochtimes.com/index/showpost/id/25431834">http://tuidang.epochtimes.com/index/showpost/id/25431834</a></p>
-<p><strong>ÍËÍÅ</strong><br />
-ÔÚÑ§Ð£µÄÊ±ºò½øµÄÍÅ£¬ÏÖÔÚ¼º¾­¹ýÁËÄêÁä×Ô¶¯ÍË³öÁË£¬Õæºó»Úµ±³õ¼ÓÈë¹²ÇàÍÅ£¬¿´µ½¹²²úµ³µÄËù×öËùÎª£¬ÕæµÄÊÇ¶ñÏ°ÖÂ¼«£¬´ÓÏÖÔÚ¿ªÊ¼£¬¸ú¹²·ËÆ²¿ª¹ØÏµ¡£<br />
-ÉùÃ÷ÈË: ÅË·É<br />
+<ahref="http://tuidang.epochtimes.com/index/showpost/id/25431834">http://tuidang.epochtimes.com/index/showpost/id/25431834</a></p>
+<p><strong>é€€å›¢</strong><br />
+åœ¨å­¦æ ¡çš„æ—¶å€™è¿›çš„å›¢ï¼ŒçŽ°åœ¨å·±ç»è¿‡äº†å¹´é¾„è‡ªåŠ¨é€€å‡ºäº†ï¼ŒçœŸåŽæ‚”å½“åˆåŠ å…¥å…±é’å›¢ï¼Œçœ‹åˆ°å…±äº§å…šçš„æ‰€åšæ‰€ä¸ºï¼ŒçœŸçš„æ˜¯æ¶ä¹ è‡´æžï¼Œä»ŽçŽ°åœ¨å¼€å§‹ï¼Œè·Ÿå…±åŒªæ’‡å¼€å…³ç³»ã€‚<br />
+å£°æ˜Žäºº: æ½˜é£ž<br />
 2019-12-01 23:40<br />
-°²»Õ°²Çì<br />
-<a href="http://tuidang.epochtimes.com/index/showpost/id/25434354">http://tuidang.epochtimes.com/index/showpost/id/25434354</a></p>
-<p>ÔðÈÎ±à¼­£ºÐÀÃ÷</p>
+å®‰å¾½å®‰åº†<br />
+<ahref="http://tuidang.epochtimes.com/index/showpost/id/25434354">http://tuidang.epochtimes.com/index/showpost/id/25434354</a></p>
+<p>è´£ä»»ç¼–è¾‘ï¼šæ¬£æ˜Ž</p>
 
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/12/2/n11694217.htm">Ã¿ÈÕÈýÍËÉùÃ÷¾«Ñ¡£¨2019/12/01£©</a>
 
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/12/1/n11693005.htm">ÖÐ¹úÎÊÌâ×¨¼ÒÁÖÎµ£ºÃÀÓ¦¿¼ÂÇÒòÓ¦ÖÐ¹²¿åÌ¨·½°¸</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/1/n11692878.htm">ÁªºÏ¹úºôÓõ¶ÔÏã¸Û¾¯·½±©Á¦½øÐÐ¶ÀÁ¢µ÷²é</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/1/n11692754.htm">³ÌÏþÈÝ£ºÏã¸Û·´ËÍÖÐµÄÎå´ó³å»÷²¨</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/1/n11692547.htm">¸ÛÈË¼¯»á¸ßº°¡°ÌìÃðÖÐ¹²¡± ¸ÄÐ´ÔÀ·É´ÊÃ÷Ö¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/1/n11692436.htm">¡¾Ö±²¥»Ø·Å¡¿12.1¸ÐÐ»ÃÀ¹ú±£»¤Ïã¸Û´óÓÎÐÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/30/n11691658.htm">Ð»Ìï£º¼ÙÈçÃÀ¹ú³·Ïú¶ÔÖÐ¹úµÄ¹ØË°</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/30/n11692096.htm">¡¾ÈÈµã»¥¶¯¡¿Ïã¸Û·¨°¸ ¼äµýÍâÌÓ ÖÐ¹²·éÑÌËÄÆð</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/30/n11690922.htm">¡¾·­Ç½±Ø¿´¡¿ÖÐ¹²µ£ÐÄµÄºûµûÐ§Ó¦À´ÁË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/28/n11686647.htm">¹ØÀÖ£º´ÓÏã¸ÛÇøÑ¡¿´ÌìÃðÖÐ¹²²¼¾Ö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/25/n11680152.htm">90ºóÉ½¶«Î¬È¨ÇàÄêÑî³¬¡°ÈýÍË¡±¹ÊÊÂ</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/12/1/n11692526.htm">¡¾·­Ç½±Ø¿´¡¿Â½¸ßÌúÆ±ÓÖ´òÕÛ ±³ºóÕæÏà¾ªÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/1/n11692547.htm">¸ÛÈË¼¯»á¸ßº°¡°ÌìÃðÖÐ¹²¡± ¸ÄÐ´ÔÀ·É´ÊÃ÷Ö¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/1/n11692664.htm">¡¾Ö±²¥»Ø·Å¡¿38ÍòÈË²Î¼Ó¡°ÎãÍü³õÐÄ´óÓÎÐÐ¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/1/n11692436.htm">¡¾Ö±²¥»Ø·Å¡¿12.1¸ÐÐ»ÃÀ¹ú±£»¤Ïã¸Û´óÓÎÐÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/21/n11671483.htm">¡°ËÄ´ó½Ô¿Õ¡±ÊÇÄÄËÄ´ó¿Õ£¿ ½ÌÈËÎòÊ²Ã´£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/24/n11677626.htm">¡¾ÀúÊ·»Øíø¡¿ÂÒÊÀÐÐ´ºÇïÊÂ Ãð¹²ËàµýµÄ´÷óÒ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/22/n11674913.htm">ÕâÐ©Çå³¯¹ÙÔ±¼ÇµÃÇ°ÊÀ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/9/30/n8353538.htm">¹Å´úÓæ¼ÒÉú»îµÄ¼ÍÂ¼Æ¬©¤©¤¡¶½­ÐÐ³õÑ©Í¼¡·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11690714.htm">¸ßÒÔÏèâ§ÊÅ Ô¬Á¢³âÔð½ÚÄ¿·½£º»¹Ç·ÎÒÒ»¸öµÀÇ¸</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/30/n11690947.htm">ÍõÐÐ£º¡°µ¹¸ê¡±ÊÇÖÐ¹²¸²ÃðÇ°ÈÃÈË¾ªÏ²µÄÒ»Ä»</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/30/n11691219.htm">²ÜµÂÍú£º´óÂ½Êµ¼ÊÓÐÏû·ÑÄÜÁ¦Õß²»×ã3ÒÚÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11688985.htm">¡¾ÅÄ°¸¾ªÆæ¡¿¸÷µØ60¹ÛÖÚ½ÓÁú³ª¡¶º£À«Ìì¿Õ¡·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/30/n11692021.htm">¡¾ÐÂÎÅ¿´µã¡¿ÐÂÎÅ¿´µã¸Ð¶÷´ðÐ» »Ø¸´ÍøÓÑÌáÎÊ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/30/n11692096.htm">¡¾ÈÈµã»¥¶¯¡¿Ïã¸Û·¨°¸ ¼äµýÍâÌÓ ÖÐ¹²·éÑÌËÄÆð</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11690714.htm">¸ßÒÔÏèâ§ÊÅ Ô¬Á¢³âÔð½ÚÄ¿·½£º»¹Ç·ÎÒÒ»¸öµÀÇ¸</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11690472.htm">Ïã¸Û·¨°¸ÉúÐ§¹ÄÎè¸ÛÈË ºÎÔÏÊ«£ºÏÂÒ»Õ¾Ó¢¹ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11690316.htm">µ¿ÄîÒÑ¹ÊºÃÓÑ¸ßÒÔÏè ÁÖÊéºÀ´©ÌØÖÆÕ½Ñ¥²ÎÈü</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11690452.htm">åûÓê¼°Ì©ºÓÍËÍÅ MOMOLANDÊ£6ÈËÔçÓÐ¼£Ïó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/30/n11691706.htm">2019ÑÇÖÞÊ±ÉÐ´óÉÍ ·´î®Â¡Ê·Óë¼Ö¾²ö©Í¬Ì¨</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/1/n11693005.md#1">ä¸­å›½é—®é¢˜ä¸“å®¶æž—è”šï¼šç¾Žåº”è€ƒè™‘å› åº”ä¸­å…±åž®å°æ–¹æ¡ˆ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/1/n11692878.md#1">è”åˆå›½å‘¼åå¯¹é¦™æ¸¯è­¦æ–¹æš´åŠ›è¿›è¡Œç‹¬ç«‹è°ƒæŸ¥</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/1/n11692754.md#1">ç¨‹æ™“å®¹ï¼šé¦™æ¸¯åé€ä¸­çš„äº”å¤§å†²å‡»æ³¢</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/1/n11692547.md#1">æ¸¯äººé›†ä¼šé«˜å–Šâ€œå¤©ç­ä¸­å…±â€ æ”¹å†™å²³é£žè¯æ˜Žå¿—</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/1/n11692436.md#1">ã€ç›´æ’­å›žæ”¾ã€‘12.1æ„Ÿè°¢ç¾Žå›½ä¿æŠ¤é¦™æ¸¯å¤§æ¸¸è¡Œ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/30/n11691658.md#1">è°¢ç”°ï¼šå‡å¦‚ç¾Žå›½æ’¤é”€å¯¹ä¸­å›½çš„å…³ç¨Ž</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/30/n11692096.md#1">ã€çƒ­ç‚¹äº’åŠ¨ã€‘é¦™æ¸¯æ³•æ¡ˆ é—´è°å¤–é€ƒ ä¸­å…±çƒ½çƒŸå››èµ·</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/30/n11690922.md#1">ã€ç¿»å¢™å¿…çœ‹ã€‘ä¸­å…±æ‹…å¿ƒçš„è´è¶æ•ˆåº”æ¥äº†</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/28/n11686647.md#1">å…³ä¹ï¼šä»Žé¦™æ¸¯åŒºé€‰çœ‹å¤©ç­ä¸­å…±å¸ƒå±€</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/25/n11680152.md#1">90åŽå±±ä¸œç»´æƒé’å¹´æ¨è¶…â€œä¸‰é€€â€æ•…äº‹</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ijwoue2416/djy/blob/master/gb/19/12/2/n11694217.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/ijwoue2416/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/ijwoue2416/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/ijwoue2416/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">ã€æœ€æ–°ç–«æƒ…3.13ã€‘å·æ™®ï¼šæˆ‘å’Œä¹ éƒ½çŸ¥ç—…æ¯’æ¥æº</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/15/n10785014.md#1" target="_blank">å…±äº§æš´æ”¿å½•ï¼šé•‡åŽ‹â€œåé©å‘½â€è¿åŠ¨</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/8/2/n2983321.md#1" target="_blank">è¯šå®‡ï¼šæ…ç ´å¿ƒçµçš„é‚£å±‚çª—æˆ·çº¸</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">ä¸­å…±å‘è¨€äººèµ–ç¾Žå†›å¸¦ç–«æƒ…åˆ°æ­¦æ±‰ å›½é™…å“—ç„¶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">é™ˆæ—¶ä¸­ï¼šä¸­å…±è°ˆç–«æƒ…æ²¡äººä¿¡ WHOä»€ä¹ˆéƒ½ä¸è¯´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">ã€æœ€æ–°ç–«æƒ…3.13ã€‘å·æ™®ï¼šæˆ‘å’Œä¹ éƒ½çŸ¥ç—…æ¯’æ¥æº</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">ç¾Žå›½CDCæ‰¿è®¤äº†ä»€ä¹ˆï¼Ÿä¸­å…±å†é€ å‡</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">å¤ä»Šä¸­å¤–é¢„è¨€ä¸­çš„2020å¹´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">ã€æ–‡å²ã€‘ä¸ºä¸€åœºåœ°éœ‡ å†¥ç•Œç­¹å¤‡äº†50å¹´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">çš‡ä¸Šå¯¹è—è™«è¯´äº†ä¸€å¥è¯ æ¼«å¤©è—ç¾å½»åº•æ¶ˆå¤±</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">ä¸­å›½ç­‰å›½ä¸ºä½•ç–«æƒ…ä¸¥é‡ï¼ŸçŠ¹å¤ªæ‹‰æ¯”ï¼šç¥žåœ¨é™¤æ¶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">ä¼ é’Ÿå—å±±è¢«å…èŒ ä¸“å®¶ç»„ç»„é•¿æ‚„æ‚„æ¢äººå†…å¹•</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘å‘å“¨äººå¼•çˆ†èˆ†æƒ… ä¹ è®¿æ­¦æ±‰ å®˜å®£ç ´äº§</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">å­æ„Ÿé«˜ä»·èœå¼•çˆ†å¤§è§„æ¨¡æŠ—è®® å¸‚æ°‘æ€’å–Šâ€œä¸‹è¯¾â€</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘ç”©é”…ç¾Žå†› ä¸­å…±å¤–äº¤éƒ¨æ¼”åŒç°§ï¼Ÿ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">ã€ç½—åŽ¨å¯»å‘³ã€‘è…Šå‘³ç‚’è·å…°è±†</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">çˆ¶æ¯æŸ“ç–«åŽ»ä¸– æ­¦æ±‰é’å±±åŒºçˆ†å­¤å„¿éš”ç¦»ç‚¹</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">ä¸–å«æ”¹æ­¦æ±‰è‚ºç‚Žåç§° é»„ç§‹ç”Ÿæ–¥è´£èŽ·ç½‘å‹èµžçˆ†</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">â€œå¥³ç‰ˆé»„å®‰â€åˆ˜ä¹å¦è¿”å°ä½é™¢ç”¨å¥ä¿ ç½‘å‹ç‚®è½°</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">ä¼ ä¸­å…±å¹¿ç”µå±€ä¸‹é™ç±ä»¤ åˆ˜äº¦è²å´äº¦å‡¡æˆ–å—å½±å“</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">æ„å¤§åˆ©ä¸ºä½•ç–«æƒ…ä¸¥é‡ï¼Ÿæ„è£”å°æ¹¾ç”·æ˜ŸæžåŽŸå› </a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">å´äº¦å‡¡ä»ŽåŠ å›½å›žä¸­å›½å¤å·¥ ä¸€æŠµè¾¾ä¾¿è¢«å¸¦èµ°éš”ç¦»</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/12/2/n11694217.htm">æ¯æ—¥ä¸‰é€€å£°æ˜Žç²¾é€‰ï¼ˆ2019/12/01ï¼‰</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/19/12/2/n11694217.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
